Update Swagger comments and remove static files saving
