# backend/docs/swagger.json
@@ -24,7 +24,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Getting MRR analytics data with all components for given period",
+                "description": "Creating MRR analytics data with all components for given period and returning it",
                 "consumes": [
                     "application/json"
                 ],
@@ -34,7 +34,7 @@
                 "tags": [
                     "analytics"
                 ],
-                "summary": "Get MRR analytics data",
+                "summary": "Create and return MRR analytics data",
                 "parameters": [
                     {
                         "description": "Parameters for MRR analytics",
@@ -81,7 +81,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Loading files' names, uploaded by user",
+                "description": "Loading invoices files' names, uploaded by user",
                 "consumes": [
                     "application/json"
                 ],
@@ -91,7 +91,7 @@
                 "tags": [
                     "files"
                 ],
-                "summary": "Loading user's files",
+                "summary": "Loading user's invoices files list",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -119,7 +119,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Saving file locally on the server and parsing its content to database",
+                "description": "Saving file locally, parsing its content to database and deleting it from the server",
                 "consumes": [
                     "application/json"
                 ],
@@ -129,7 +129,7 @@
                 "tags": [
                     "files"
                 ],
-                "summary": "Saving user's file",
+                "summary": "Saving user's file's content",
                 "parameters": [
                     {
                         "type": "file",
@@ -143,7 +143,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ResponseSuccessSaveFile"
+                            "$ref": "#/definitions/models.ResponseSuccessSaveFileContent"
                         }
                     },
                     "400": {
@@ -174,7 +174,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Deleting file and cleaning database",
+                "description": "Deleting invoices linked to file from database",
                 "consumes": [
                     "application/json"
                 ],
@@ -184,11 +184,11 @@
                 "tags": [
                     "files"
                 ],
-                "summary": "Deleting user's file",
+                "summary": "Deleting user's invoices file's content",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "File to delete",
+                        "description": "Invoice file to delete",
                         "name": "filename",
                         "in": "path",
                         "required": true
@@ -454,7 +454,7 @@
                 }
             }
         },
-        "models.ResponseSuccessSaveFile": {
+        "models.ResponseSuccessSaveFileContent": {
             "type": "object",
             "properties": {
                 "filename": {
